[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Objects/Boss.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]

[node name="Boss" type="KinematicBody2D" groups=["Enemies"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )

[node name="Keha_collision" type="CollisionShape2D" parent="."]
scale = Vector2( 20, 20 )
shape = SubResource( 1 )

[node name="Seek_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Seek_circle" type="CollisionShape2D" parent="Seek_area"]
scale = Vector2( 100, 100 )
shape = SubResource( 2 )

[node name="Damage_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Damage_circle" type="CollisionShape2D" parent="Damage_area"]
scale = Vector2( 25, 25 )
shape = SubResource( 3 )

[node name="Damage_timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="body_entered" from="Seek_area" to="." method="_on_Seek_area_body_entered"]
[connection signal="body_exited" from="Seek_area" to="." method="_on_Seek_area_body_exited"]
[connection signal="timeout" from="Damage_timer" to="." method="_on_Damage_timer_timeout"]
